--- a/newtab.html
+++ b/newtab.html
@@ -2,9 +2,12 @@
 <html>
   <head>
     <title>Test</title>
+    <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="main.css">
+    <script src="results.js"></script>
   </head>
   <body>
     <h1>Hello World!</h1>
+   
   </body>
 </html>
