--- a/newtab.html
+++ b/newtab.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!-- <!doctype html>
 <html>
   <head>
     <title>Test</title>
@@ -10,4 +10,4 @@
     <h1>Hello World!</h1>
    
   </body>
-</html>
+</html> -->
